<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_fingerprints"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mse.wifiposition.SaveFingerprints">

    <TextView
        android:text="@string/room_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/room_label"
        android:labelFor="@+id/room"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/room"
        android:layout_below="@+id/room_label"
        android:layout_alignParentStart="true"
        android:text="@string/default_room" />

    <TextView
        android:text="@string/point_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/point_name_label"
        android:labelFor="@+id/point_name"
        android:layout_below="@+id/room"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/point_name"
        android:layout_below="@+id/point_name_label"
        android:layout_alignParentStart="true"
        android:text="@string/default_point_name"/>

    <TextView
        android:text="@string/building_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/building_spinner_label"
        android:labelFor="@+id/spinnerBuildings"
        android:layout_below="@+id/point_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerBuildings"
        android:layout_width="match_parent"
        android:layout_below="@+id/building_spinner_label"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/floor_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/floor_spinner_label"
        android:labelFor="@+id/spinnerFloors"
        android:layout_below="@+id/spinnerBuildings"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerFloors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/floor_spinner_label"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="@string/bluetooth"
        android:theme="@style/SCBSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerFloors"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/switchBlutetooth" />

    <Switch
        android:text="@string/wifi"
        android:theme="@style/SCBSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchBlutetooth"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/switchWifi"
        android:checked="true" />

    <Switch
        android:text="@string/magnetic_field"
        android:theme="@style/SCBSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchWifi"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/switchMagneticField" />

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/switchMagneticField"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:id="@+id/text" />

</RelativeLayout>
