<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@id/add_point"
        android:title="@string/add_points"
        android:icon="@drawable/ic_add_point"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        app:showAsAction="ifRoom" />

    <item android:id="@id/cancel"
        android:title="@string/cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:showAsAction="ifRoom"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item android:id="@id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        app:showAsAction="always" />

</menu>