<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mse.ips.activity.ShowInfoActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_group_technology">

        <RadioButton
            android:text="@string/bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/radio_bluetooth"
            android:checked="true"/>

        <RadioButton
            android:text="@string/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/radio_wifi" />

        <RadioButton
            android:text="@string/magnetic_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:id="@+id/radio_magnetic" />

    </RadioGroup>

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@color/highligth"
        android:textColor="@color/white"
        android:layout_marginTop="27dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:id="@+id/text_scan_results" />

    </ScrollView>

</LinearLayout>
