<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mse.ips.activity.GetLocationActivity">

    <TextView
        android:text="@string/btn_label_find_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_position_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:text="@string/bluetooth"
        android:theme="@style/SCBSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_position_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/switchBlutetooth" />

    <Switch
        android:text="@string/wifi"
        android:theme="@style/SCBSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchBlutetooth"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/switchWifi"
        android:checked="true" />

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_start_stop_find_location"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/switchWifi"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:id="@+id/point_name_layout"
        android:layout_below="@+id/room_layout"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/point_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point_name_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point_name_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:id="@+id/room_layout"
        android:layout_below="@+id/btn_start_stop_find_location"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/room_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/room_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/room_value"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/point_name_layout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:id="@+id/text_scan_results" />


</RelativeLayout>
