<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mse.wifiposition.MainActivity">

    <TextView
        android:text="@string/home_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_label_save_fingerprints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:id="@+id/btn_save_fingerprints" />

    <Button
        android:text="@string/btn_label_find_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_find_location"
        android:layout_below="@+id/btn_save_fingerprints"
        android:layout_alignParentStart="true"
        android:layout_marginTop="82dp" />

</RelativeLayout>
