<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compute_precision"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mse.ips.activity.ComputePrecision"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="60"
    android:orientation="horizontal">

    <com.mse.ips.view.MapView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="40"
    android:layout_marginTop="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:text="@string/bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:id="@+id/switchBlutetooth" />

            <CheckBox
                android:text="@string/wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:id="@+id/switchWifi"
                android:checked="true"/>

            <CheckBox
                android:text="@string/magnetic_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:id="@+id/switchMagneticField" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:text="@string/building_spinner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:id="@+id/building_spinner_label"
                android:labelFor="@+id/spinnerBuildings" />

            <Spinner
                android:id="@+id/spinnerBuildings"
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_weight="25" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="16dp" >

            <TextView
                android:text="@string/floor_spinner_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:id="@+id/floor_spinner_label"
                android:labelFor="@+id/spinnerFloors" />

            <Spinner
                android:id="@+id/spinnerFloors"
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_weight="25" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

                <Button
                    android:text="@string/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/highligth"
                    android:textColor="@color/white"
                    android:layout_marginRight="3dp"
                    android:id="@+id/btn_reset"
                    android:layout_weight="50"
                    tools:ignore="ButtonStyle,RtlHardcoded" />

                <Button
                    android:text="@string/start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/highligth"
                    android:textColor="@color/white"
                    android:layout_weight="50"
                    android:layout_marginLeft="3dp"
                    android:id="@+id/btn_start_stop_find_location"
                    tools:ignore="ButtonStyle,RtlHardcoded" />

        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:id="@+id/point_name_layout">

            <TextView
                android:text="@string/average_precision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:id="@+id/label_average_precision"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/average_precision"
                android:layout_weight="40"
                tools:ignore="RelativeOverlap,RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:id="@+id/room_layout">

            <TextView
                android:text="@string/standart_deviation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:id="@+id/label_standart_deviation"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/standart_deviation"
                android:layout_weight="40"
                tools:ignore="RelativeOverlap,RtlHardcoded" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


</LinearLayout>

